# ata-validator

./: .gitignore  .gitmodules  .npmignore  ANNOUNCEMENT.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  binding-options.js  binding.gyp  compat.js  compat.mjs  index.browser.mjs  index.d.ts  index.js  index.mjs  package.json  test.js
.github/workflows/: ci.yml  prebuild.yml
benchmark/: _scoreboard-helpers.mjs  after_M1.txt  baseline_before_M1.txt  bench.cpp  bench_ajv_mitata.mjs  bench_all_mitata.mjs  bench_ci.js  bench_cold_path.mjs  bench_cold_start.mjs  bench_complex_mitata.mjs  bench_complex_validate.mjs  bench_dynamicref_mitata.mjs  bench_fast_api.js  bench_fastify_ata_vs_ajv.js  bench_fastify_compiled.js  bench_fastify_heavy_validation.js  bench_fastify_pipeline.js  bench_fastify_simple.js  bench_first_call.mjs  bench_invalid_fair.mjs  bench_json_path_mitata.mjs  bench_large.js  bench_large_mitata.mjs  bench_mitata.js  bench_multipliers.mjs  bench_ndjson_batch.js  bench_simple_validate.mjs  bench_unevaluated_mitata.mjs  bench_vs_ajv.js  bench_vs_ecosystem.mjs  bench_vs_fast_json_stringify.mjs  bench_vs_typebox_esm.mjs  blaze_template.json  profile_cold_start.js  profile_invalid.js  profile_ondemand.js  profile_unevaluated.js  profile_v8_deep.js  profile_valid_only.js  profile_validate.js
binding/: ata_napi.cpp
bowtie/: Dockerfile  bowtie_ata.js
docs/: migration-from-ajv.md  typescript-gen.md
docs/integrations/: README.md  effect.md
docs/superpowers/specs/: 2026-03-31-ajv-feature-parity-design.md
examples/: ajv-migration.js  api-gateway.js  basic.js  fastify-plugin.js
fuzz/: build.sh  compile_fuzzer.cpp  json.dict  roundtrip_fuzzer.cpp  validate_fuzzer.cpp
include/: ata.h  ata_c.h
lib/: draft7.js  js-compiler.js  shape-classifier.js  tier0.js  ts-gen.js
scripts/: install.js
singleheader/: amalgamate.py  ata.cpp  ata.h
src/: ata.cpp  ata_c.cpp
tests/: browser_stub.js  run_json_test_suite.js  run_suite.js  run_suite_draft7.js  test.cpp  test_ajv_errors.js  test_browser.js  test_collect_evaluated.js  test_differential_tiers.js  test_draft7.js  test_dual_path.js  test_keywords_codegen.js  test_lazy.js  test_ref_cross.js  test_scanner_regression.js  test_shape_classifier.js  test_tier0.js  test_ts_corpus.js  test_ts_differential.js
